public class Car extends Vehicle{
    public void start(){
        System.out.println("startCar!");
    }
    public void stop(){
        System.out.println("stopCar!");
    }
    public void accelerate(){
        System.out.println("accelerateCar!");
    }
}
