public class Motorcycle extends Vehicle{
    public void start(){
        System.out.println("startMotorcycle!");
    }
    public void stop(){
        System.out.println("stopMotorcycle!");
    }
    public void accelerate(){
        System.out.println("accelerateMotorcycle!");
    }
}
