@startuml
class Bicycle {
+ void start()
+ void stop()
+ void accelerate()
}

class Main {
+ {static} void main(String[])
}

class Motorcycle {
+ void start()
+ void stop()
+ void accelerate()
}

class Car {
+ void start()
+ void stop()
+ void accelerate()
}

abstract class Vehicle {
+ {abstract}void start()
+ {abstract}void stop()
+ {abstract}void accelerate()
}



Vehicle <|-- Bicycle
Vehicle <|-- Motorcycle
Vehicle <|-- Car
@enduml